# AI-2015

./: .gitignore  readme.md  startup - AIClient_Python.bat
AIClient/AIClient/: AIClient.vcxproj  CMakeLists.txt  Character.cpp  Character.h  GameMap.cpp  GameMap.h  NetCommandController.cpp  NetCommandController.h  NetworkController.cpp  NetworkController.h  Player.cpp  Player.h  client.cpp
AIClient/include/: Character.h  GameMap.h  NetworkController.h  Player.h
AIClient/src/: Character.cpp  GameMap.cpp  NetworkController.cpp  client.cpp
AIClient_JAVA/: main.java
AIClient_JAVA/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html
AIClient_JAVA/doc/aiclient/: AI.AIStatus.html  AI.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
AIClient_JAVA/doc/index-files/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html
AIClient_JAVA/doc/world/: World.MapEntity.html  World.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
AIClient_JAVA/src/aiclient/: AI.java  Client.java
AIClient_JAVA/src/event/: EventController.java  GameStartEvent.java  MissileHitEvent.java  StartGameEvent.java  UpdateBoxEvent.java  UpdateCharacterEvent.java  UpdateMissileEvent.java
AIClient_JAVA/src/network/: NetworkController.java
AIClient_JAVA/src/world/: Character.java  Mine.java  Team.java  World.java
AIClient_Python/: .pydevproject
AIClient_Python/docs/: index.rst  mathUtils.rst
AIClient_Python/src/: __init__.py
AIClient_Python/src/aiclient/: AI.py  AIDefault.py  AI_Felix.py  Client.py  MyAI.py  Singleton.py  main.py
AIClient_Python/src/event/: AddPlayerEvent.py  BaseEvent.py  DropMineEvent.py  EventController.py  EventFactory.py  GameStartEvent.py  IngoingEvent.py  JoinGameEvent.py  MineHitEvent.py  MissileHitEvent.py  MoveCharacterEvent.py  OutgoingEvent.py  QueueController.py  ThrowMissileEvent.py  UpdateBoxEvent.py  UpdateCharacterEvent.py  UpdateMissileEvent.py
AIClient_Python/src/mathUtils/: Direction.py  MathUtils.py  Vector2.py
AIClient_Python/src/network/: NetworkController.py
AIClient_Python/src/world/: Character.py  Missile.py  Team.py  World.py
AICompetition/AICompetition/: AICompetition.vcxproj  AICompetitionApplication.cpp  AICompetitionApplication.h  NPC.h  NetCommandController.cpp  stdafx.h
AICompetition/AICompetition/Debug/: Action Moba Alpha_manifest.rc
Action Moba Alpha/: Action Moba Alpha.sln
Action Moba Alpha/Action Moba Alpha/: Action Moba Alpha.vcxproj  BaseApplication.cpp  BaseApplication.h  MobaActionApplication.cpp  MobaActionApplication.h  NPC.h  SinbadCharacterController.h  TutorialApplication.cpp
GameClient/: CMakeLists.txt  EventController.cpp  GameClient.vcxproj
GameClient/GameClient/: BaseApplication.cpp  GameClient.vcxproj  GameClientApplication.cpp  GameClientApplication.h  NetCharacter.cpp  NetCharacter.h  NetCommandController.h  NetPlayer.cpp  NetTeam.h  NetUtility.h  NetworkController.cpp  NetworkController.h  SinbadCharacterController.h  client.cpp  stdafx.h
GameClient/GameClient/backup/: NetCommandController.h  NetPlayer.h
GameClient/TestProject/: Map.cpp  Map.h
GameClient/include/: BaseApplication.h  Character.h  EventController.h  EventFactory.h  GameClientApplication.h  GameEvent.h  Map.h  Mine.h  Missile.h  NetCharacter.h  NetPlayerController.h  NetUtility.h  NetworkController.h  QueueController.h  SdkCameraMan.h  SinbadCharacterController.h  Team.h  TextOverlay.h  World.h  stdafx.h
GameClient/src/: BaseApplication.cpp  BaseApplication.cpp~  Character.cpp  EventController.cpp  EventFactory.cpp  GameClientApplication.cpp  GameEvent.cpp  Map.cpp  Mine.cpp  Missile.cpp  NetCharacter.cpp  NetCommandController.cpp  NetPlayerController.cpp  NetTeam.cpp  NetworkController.cpp  QueueController.cpp  Team.cpp  TextOverlay.cpp  World.cpp
GameClientNoGui/GameClient/: CMakeLists.txt  GameClient.vcxproj  NetCharacter.cpp  NetCharacter.h  NetCommandController.cpp  NetCommandController.h  NetPlayer.cpp  NetPlayer.h  NetPlayerController.cpp  NetPlayerController.h  NetUtility.h  NetworkController.cpp  NetworkController.h  client.cpp
Release/AIClient_JAVA/: .project  AIClient_Java_start.sh
Release/AIClient_JAVA/docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
Release/AIClient_Python/docs/: index.html  mathUtils.html  objects.inv
Release/AIClient_Python/html/: aiclient.html  world.html
Release/GameClient/: GameClient_start.sh
Release/ServerRoot/: GameServer.js
ServerRoot/: GameServer.js  MessageServer.js
TestNodeJs/TestNodeJs/: TestNodeJs.vcxproj  client.cpp
old script/: Linux_Start_Client  Linux_Start_Python  Linux_Start_Server
(+146 files in other folders)
